--- a/index.html
+++ b/index.html
@@ -1,52 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Alice in Borderland – Deadly Logic Room</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f0f0f;
-      color: #ffffff;
-    }
-    header {
-      text-align: center;
-      padding: 60px 20px;
-      background: linear-gradient(180deg, #1a1a1a, #000);
-    }
-    header img {
-      max-width: 300px;
-      width: 80%;
-      border-radius: 12px;
-      margin: 20px 0;
-      box-shadow: 0 0 20px rgba(255,0,0,0.4);
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    header p {
-      max-width: 600px;
-      margin: auto;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #cccccc;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alice in Borderland - Deadly Logic Room</title>
+    <meta name="description" content="Survive 100 deadly puzzle rooms. Choose wisely or face GAME OVER." />
+    <meta name="author" content="Borderland Games" />
 
-  <header>
-    <h1>Alice in Borderland – Deadly Logic Room</h1>
-    <p>
-      A browser-based survival puzzle game inspired by Alice in Borderland.
-      Solve deadly logic challenges under time pressure—every decision
-      determines whether you escape or fail.
-    </p>
-    <img src="image.png" alt="Deadly Logic Room Preview">
-  </header>
+    <meta property="og:title" content="Alice in Borderland - Deadly Logic Room" />
+    <meta property="og:description" content="Survive 100 deadly puzzle rooms. Choose wisely or face GAME OVER." />
+    <meta property="og:type" content="website" />
 
-</body>
+    <meta name="twitter:card" content="summary_large_image" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
